<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#C0C0C0"
    tools:context="com.player.mrlukashem.customplayer.player.PlayerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11pt"
        android:fontFamily="monospace"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:id="@+id/titleTV"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:fontFamily="monospace"
        android:layout_below="@+id/titleTV"
        android:layout_centerInParent="true"
        android:id="@+id/artistTV"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/artistTV"
        android:layout_centerInParent="true"
        android:id="@+id/trackThumbnailIV" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trackThumbnailIV"
        android:layout_above="@+id/buttonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/seekBar" />

    <TextView
        android:text="@string/timer_start_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentStart="true"
        android:id="@+id/timerStartTV" />

    <TextView
        android:text="@string/timer_end_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentEnd="true"
        android:id="@+id/timerEndTV" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:text="@string/fast_seek_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastSeekLeftButton" />

        <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="PlayOnButtonClick"
            android:id="@+id/playPauseButton" />

        <Button
            android:text="@string/fast_seek_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastSeekRightButton" />
    </LinearLayout>

</RelativeLayout>
